# nano

./: README.md  install.sh  pyproject.toml
src/nano/: model.py  train.py
